# PhoneBook.Application.Qt

./: CMakeLists.txt  Database.sql  PhoneBookAppQt.sln  README.md  main.cpp
PhoneBookAppQt/: PhoneBookAppQt.cpp  PhoneBookAppQt.h  PhoneBookAppQt.qrc  PhoneBookAppQt.ui  PhoneBookAppQt.vcxproj  PhoneBookAppQt.vcxproj.filters  main.cpp
PhoneBookAppQt/Domain/: Contacts.h
PhoneBookAppQt/Infrastructure/: ConnectionStringBuilder.h  DatabaseConnection.h
PhoneBookAppQt/Repository/: IRepository.h  SqlServerContactRepository.h
PhoneBookAppQt/Service/: ContactService.h
PhoneBookAppQt/UI/: ContactViewModel.h  PhoneBookAppQt.cpp  PhoneBookAppQt.h  PhoneBookAppQt.ui  PhonebookModel.h
controllers/: contactcontroller.cpp  contactcontroller.h
models/: contact.cpp  contact.h
repositories/: contactrepository.cpp  contactrepository.h
views/: contactdialog.cpp  contactdialog.h  contactdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
